[MODINVOICE-616]. Incorrect encumbrances on orders with paid and cancelled invoices (#496)
* [MODINVOICE-616]. Incorrect encumbrances on orders with paid and cancelled invoices

* [MODINVOICE-616]. Add missing credit amount back to the encumbrance when enc is being exceeded

* [MODINVOICE-616]. Update updateEncumbranceToCancelTransaction

* [MODINVOICE-616]. Fix comment

* [MODINVOICE-616]. Add missing import

* [MODINVOICE-616]. Add unit test coverage, update comment